add code & circle button for image head.

--- a/kanpe.html
+++ b/kanpe.html
@@ -231,8 +231,29 @@
       <div class="six cols card"><!-- card -->
         <div class="image-head" style="background-image: url(http://placeimg.com/400/200/animals);">
           <div class="title">
-            This is title.
+            This is image header.
           </div>
+          <a class="circle-button fill-dark show-btn">
+            <i class="icon ion-code"></i>
+          </a>
+        </div>
+        <div class="body">
+        <div class="visible-content">
+          This is body. you can remove me.
+        </div>
+          <textarea class="hidden-code" style="display: none" onclick="this.focus();this.select()">
+<div class="three cols card card-red">
+  <div class="head">
+    I'm head.
+  </div>
+  <div class="body">
+    The body is here.
+  </div>
+  <div class="foot">
+    <span class="left">left foot.</span>
+  </div>
+</div>
+          </textarea>
         </div>
         <div class="foot">
           <a href="#" class="tx-center one-half card-btn">
@@ -243,12 +264,30 @@
           </a>
         </div>
       </div>
-      <div class="six cols card card-blue"><!-- card -->
+      <div class="six cols card"><!-- card -->
         <div class="head">
-          <i class="icon ion-android-alert"></i>&nbsp;I'm head.
+          I'm head.
+          <a class="circle-button fill-dark show-btn">
+            <i class="icon ion-code"></i>
+          </a>
         </div>
         <div class="body">
-          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
+          <div class="visible-content">
+            The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
+          </div>
+          <textarea class="hidden-code" style="display: none" onclick="this.focus();this.select()">
+<div class="three cols card card-red">
+  <div class="head">
+    I'm head.
+  </div>
+  <div class="body">
+    The body is here.
+  </div>
+  <div class="foot">
+    <span class="left">left foot.</span>
+  </div>
+</div>
+          </textarea>
         </div>
         <div class="foot">
           <div class="meta">
