--- a/concept.html
+++ b/concept.html
@@ -70,7 +70,7 @@
 
   <div class="pack">
     <div class="row">
-      <div class="tx-center">
+      <div class="tx-center top-logo">
         <img src="images/logo.png" width="180px" />
         <h5 class="fw-100"><span class="fw-500">Customizing</span><br class="show-xs"> is as</span><span class="fw-500"> easy</span> as pie.</h5>
         <button class="btn btn-sm menu-btn"><i class="icon ion-navicon"></i> Menu</button>
