modify detailed design

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
   <div class="pack">
     <div class="row">
-      <div class="tx-center">
-        <img src="images/logo.png" width="180px" />
+      <div class="tx-center top-logo">
+        <img src="images/logo.png" />
         <h5 class="fw-100"><span class="fw-500">Customizing</span><br class="show-xs"> is as</span><span class="fw-500"> easy</span> as pie.</h5>
         <button class="btn btn-sm menu-btn"><i class="icon ion-navicon"></i> Menu</button>
         <a href="https://codeload.github.com/thousandjapan/qwerty/zip/master"><button class="btn btn-sm"><i class="icon ion-archive"></i> Download</button></a>
