--- a/concept.html
+++ b/concept.html
@@ -32,28 +32,6 @@
     <div class="header-left">
       <a class="menu-btn"><i class="icon ion-navicon"></i></a>
     </div>
-    <nav class="pmenu pmenu-left">
-      <div class="brand-box">
-        <div class="spacer-sm"></div>
-        <div class="tx-center menu-brand">
-          <img class="" src="images/logo.png" width="100px" />
-          <p>qwerty</p>
-        </div>
-        <div class="spacer-sm"></div>
-      </div>
-      <ul class="brand-ul">
-        <li class="pmenu-link"><a href="./index.html"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
-        <li class="pmenu-link active"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
-        <li class="pmenu-link"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
-        <li class="pmenu-submenu">
-            <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
-            <ul>
-                <li class="pmenu-link"><a href="">Coming Soon...</a></li>
-            </ul>
-        </li>
-        <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
-      </ul>
-    </nav>
     <div class="header-center">
       <a href="index.html"><h4 class="logo">qwerty</h4></a>
     </div>
@@ -61,6 +39,29 @@
       <a class=""><i class="icon ion-ios-search-strong"></i></a>
     </div>
   </header>
+  
+  <nav class="left-nav">
+    <div class="brand-box">
+      <div class="spacer-sm"></div>
+      <div class="tx-center menu-brand">
+        <img class="" src="images/logo.png" width="100px" />
+        <p>qwerty</p>
+      </div>
+      <div class="spacer-sm"></div>
+    </div>
+    <ul class="brand-ul">
+      <a href="./index.html"><li class=""><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</li></a>
+      <a href="./concept.html"><li class="active"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</li></a>
+      <a href="./kanpe.html"><li class=""><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</li></a>
+      <li class="folder-list">
+          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="icon arrow-icon ion-ios-arrow-right"></i></a>
+      </li>
+      <ul class="hidden-li">
+          <a href=""><li class="">Coming Soon...</li></a>
+      </ul>
+      <li class=""><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
+    </ul>
+  </nav>
 
 <div class="site-overlay"></div>
 
@@ -71,18 +72,24 @@
   <div class="pack">
     <div class="row">
       <div class="tx-center top-logo">
-        <img src="images/logo.png" width="180px" />
-        <h5 class="fw-100"><span class="fw-500">Customizing</span><br class="show-xs"> is as</span><span class="fw-500"> easy</span> as pie.</h5>
-        <button class="btn btn-sm menu-btn"><i class="icon ion-navicon"></i> Menu</button>
-        <a href="https://codeload.github.com/thousandjapan/qwerty/zip/master"><button class="btn btn-sm"><i class="icon ion-archive"></i> Download</button></a>
+        <img src="images/logo.png" />
+        <div class="row">
+            <a href="https://codeload.github.com/thousandjapan/qwerty/zip/master"><button style="margin-top: 8px" class="btn btn-sm fill-red"><i class="icon ion-archive"></i> Download</button></a>
+            <a href="https://github.com/thousandjapan/qwerty" target="_blank"><button style="margin-top: 8px" class="btn btn-sm"><i class="icon ion-social-github"></i> Github</button></a>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="pack">
     <div class="row">
-      <div class="tx-center">
-        <h2 class="fw-900">Simple Framework <span class="fw-100">+</span> Clean Design</h2>
+      <div class="">
+        <h4 class="fw-800">SaaS? Gulp? npm?</h4>
+        <p>The Way We Build The Website or Webapp is lively Changing. And I'm Sick of new frontend trends, and, 
+        <br />Thinking calmly, The trick is simple. For example, Framework is a mere others Fuckin' code. The Fuckin' code should be Reusable, Intersection of various Projects.
+        <br />To using qwerty, just put qwerty.css in your Project, or set CDN, as easy as a pie.</p>
+        <h4 class="fw-800">Less core</h4>
+        <p>In the first of Design phase, we should focus to "CORE" like a layout, grid, action-flow, because it's Unrecoverable at later phase.<br>Ideal Grid System and Clean Design are included in qwerty.</p>
       </div>
     </div>
   </div>
@@ -109,6 +116,18 @@ $(function() {
     } else if (jQuery(this).hasClass('pmenu-submenu-open') ) {
       $('.pmenu-icon',this).addClass('ion-ios-arrow-down');
       $('.pmenu-icon',this).removeClass('ion-ios-arrow-right');
+    }
+  });
+  
+  $('.folder-list').click(function() {
+    var element = $(this);
+    var next = $(this).next();
+    if (next.hasClass('folder-list')) {
+    } else {
+      var arrow = element.find('.arrow-icon');
+      arrow.toggleClass('ion-ios-arrow-right')
+      arrow.toggleClass('ion-ios-arrow-down')
+      next.slideToggle('fast');
     }
   });
 });
